# pico_ft8_xcvr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.PC  README.md  common.h  run_ft8.cpp  run_ft8.uf2
PDX-FSK-Processing/: PDX-FSK-Processing.kicad_prl  PDX-FSK-Processing.kicad_pro  PDX-FSK-Processing.kicad_sch  ZCD-Using-Comparator-LM393.asc
PicoFrequencyCounter/: README.md  blink_example_for_debugging.py  main.py
PicoFrequencyCounter-v2/: README.md  main.py
Si5351_Auto_Calibrator/: README.md
Si5351_Auto_Calibrator/si5351_calibration/: si5351_calibration.ino
Si5351_Calibration/: README.md
Si5351_Calibration/si5351_calibration/: si5351_calibration.ino
Single-Transistor-Preamplifier/: README.txt  Single-Transistor-Preamplifier.kicad_prl  Single-Transistor-Preamplifier.kicad_pro  Single-Transistor-Preamplifier.kicad_sch  audioamp.asc
fft/: README.md  kiss_fftr.h
ft8/: CMakeLists.txt  README.md  decode_ft8.cpp  decode_ft8.h  gen_ft8.cpp  gen_ft8.h
microphone_adc/: CMakeLists.txt  microphone_adc.uf2
peripheral_util/: CMakeLists.txt
peripheral_util/pico_si5351/: CMakeLists.txt  si5351.c.AA1GD  si5351.c.upstream  si5351.cpp  si5351.h
util/: CMakeLists.txt  rx_ft8.cpp  rx_ft8.h  tx_ft8.cpp
